# memsug

./: .vimrc  CMakeLists.txt  config_example.ini
include/: Memsug.hh  choose.h  log.hh  memsug.hh  memsug.test.hh  optional.hh  preftree.hh  preftree.test.hh  request.hh  save.hh  server.hh  text.hh  text.test.hh  utf.hh  util.hh  valuer.hh  valuer.test.hh
misc/: don_short.txt
src/: log.cc  main.cc  memsug.cc  memsug_daemon.cc  preftree.cc  preftree.test.cc  request.cc  server.cc  tests.cc  text.cc  utf.cc  valuer.cc
